// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect TreeSelect Custom Icons should \`treeIcon\` work 1`] = `
<div
  class="ant-select ant-tree-select osui-tree-select ant-select-single ant-select-show-arrow ant-select-open"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
  <div>
    <div
      class="ant-select-dropdown osui-tree-select-dropdown ant-tree-select-dropdown ant-select-dropdown-empty ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
      style="opacity: 0; pointer-events: none; min-width: 0; width: 0px;"
    >
      <div>
        <div
          class="ant-select-empty"
          role="listbox"
        >
          <div
            class="ant-empty ant-empty-normal ant-empty-small"
          >
            <div
              class="ant-empty-image"
            >
              <svg
                class="ant-empty-img-simple"
                height="41"
                viewBox="0 0 64 41"
                width="64"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                  transform="translate(0 1)"
                >
                  <ellipse
                    class="ant-empty-img-simple-ellipse"
                    cx="32"
                    cy="33"
                    rx="32"
                    ry="7"
                  />
                  <g
                    class="ant-empty-img-simple-g"
                    fill-rule="nonzero"
                  >
                    <path
                      d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                    />
                    <path
                      class="ant-empty-img-simple-path"
                      d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                    />
                  </g>
                </g>
              </svg>
            </div>
            <div
              class="ant-empty-description"
            >
              No Data
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="down"
      class="anticon anticon-down ant-select-suffix"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`TreeSelect TreeSelect Custom Icons should support customized icons 1`] = `
<div
  class="ant-select ant-tree-select osui-tree-select ant-select-multiple ant-select-allow-clear ant-select-show-search"
>
  <div
    class="ant-select-selector"
  >
    <div
      class="ant-select-selection-overflow"
    >
      <div
        class="ant-select-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="ant-select-selection-item"
        >
          <span
            class="ant-select-selection-item-content"
          >
            leaf1
          </span>
          <span
            aria-hidden="true"
            class="ant-select-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span>
              remove
            </span>
          </span>
        </span>
      </div>
      <div
        class="ant-select-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="ant-select-selection-item"
        >
          <span
            class="ant-select-selection-item-content"
          >
            leaf2
          </span>
          <span
            aria-hidden="true"
            class="ant-select-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span>
              remove
            </span>
          </span>
        </span>
      </div>
      <div
        class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
        style="opacity: 1;"
      >
        <div
          class="ant-select-selection-search"
          style="width: 0px;"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
          <span
            aria-hidden="true"
            class="ant-select-selection-search-mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    class="ant-select-clear"
    style="user-select: none;"
    unselectable="on"
  >
    <span>
      clear
    </span>
  </span>
</div>
`;

exports[`TreeSelect rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-select ant-tree-select ant-select-rtl osui-tree-select ant-select-single ant-select-show-arrow"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-activedescendant="undefined_list_0"
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-haspopup="listbox"
        aria-owns="undefined_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        readonly=""
        role="combobox"
        style="opacity:0"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select:none;-webkit-user-select:none"
    unselectable="on"
  >
    <span
      aria-label="down"
      class="anticon anticon-down ant-select-suffix"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </span>
  </span>
</div>
`;
